syntax = "proto3";
package hmb.protobuf;

message UserInfoRequest {
  int64 userId = 1;
}

message UserInfoResponse {
  int32 userType = 1;
  string mobile = 2;
}